// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing snapshot for actions-talon-one destination: createAudience action - all fields 1`] = `
Object {
  "audienceId": "Ns^3TjD",
  "audienceName": "Ns^3TjD",
}
`;

exports[`Testing snapshot for actions-talon-one destination: createAudience action - required fields 1`] = `
Object {
  "audienceId": "Ns^3TjD",
  "audienceName": "Ns^3TjD",
}
`;

exports[`Testing snapshot for actions-talon-one destination: deleteAudience action - all fields 1`] = `""`;

exports[`Testing snapshot for actions-talon-one destination: deleteAudience action - required fields 1`] = `""`;

exports[`Testing snapshot for actions-talon-one destination: deleteAudience action - required fields 2`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "ApiKey-v1 some_api_key",
    ],
    "destination-hostname": Array [
      "%(D1Zib7U(",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for actions-talon-one destination: deleteAudience action - required fields 3`] = `
Headers {
  Symbol(map): Object {
    "authorization": Array [
      "ApiKey-v1 some_api_key",
    ],
    "destination-hostname": Array [
      "%(D1Zib7U(",
    ],
    "user-agent": Array [
      "Segment (Actions)",
    ],
  },
}
`;

exports[`Testing snapshot for actions-talon-one destination: trackEvent action - all fields 1`] = `
Object {
  "attributesInfo": Array [
    Object {
      "name": "fU[[CRDXd2",
      "type": "fU[[CRDXd2",
    },
  ],
  "customerProfileId": "fU[[CRDXd2",
  "eventAttributes": Object {
    "testType": "fU[[CRDXd2",
  },
  "eventType": "fU[[CRDXd2",
  "type": "fU[[CRDXd2",
}
`;

exports[`Testing snapshot for actions-talon-one destination: trackEvent action - required fields 1`] = `
Object {
  "customerProfileId": "fU[[CRDXd2",
  "eventType": "fU[[CRDXd2",
  "type": "fU[[CRDXd2",
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateAudience action - all fields 1`] = `
Object {
  "audienceName": "y73nLJ!",
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateAudience action - required fields 1`] = `
Object {
  "audienceName": "y73nLJ!",
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfile action - all fields 1`] = `
Object {
  "attributes": Object {
    "testType": "GSv&J8",
  },
  "attributesInfo": Array [
    Object {
      "name": "GSv&J8",
      "type": "GSv&J8",
    },
  ],
  "audiencesChanges": Object {
    "adds": Array [
      -7356410144751616,
    ],
    "deletes": Array [
      -7356410144751616,
    ],
  },
  "runRuleEngine": true,
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfile action - required fields 1`] = `
Object {
  "audiencesChanges": Object {},
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfileV2 action - all fields 1`] = `
Object {
  "attributes": Object {
    "testType": "8Yg2!m9eP3^U",
  },
  "attributesInfo": Array [
    Object {
      "name": "8Yg2!m9eP3^U",
      "type": "number",
    },
  ],
  "audiencesChanges": Object {
    "adds": Array [
      Object {
        "integrationId": "8Yg2!m9eP3^U",
        "name": "8Yg2!m9eP3^U",
      },
    ],
    "deletes": Array [
      Object {
        "integrationId": "8Yg2!m9eP3^U",
        "name": "8Yg2!m9eP3^U",
      },
    ],
  },
  "runRuleEngine": true,
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfileV2 action - required fields 1`] = `
Object {
  "audiencesChanges": Object {},
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAudiences action - all fields 1`] = `
Object {
  "data": Array [
    Object {
      "adds": Array [
        -5649754167967744,
      ],
      "customerProfileId": "g64#i$3",
      "deletes": Array [
        -5649754167967744,
      ],
    },
  ],
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerProfilesAudiences action - required fields 1`] = `
Object {
  "data": Array [
    Object {
      "customerProfileId": "g64#i$3",
    },
  ],
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerSession action - all fields 1`] = `
Object {
  "cartItemAttributesInfo": Array [
    Object {
      "name": "rDTL^f[cL)m",
      "type": "number",
    },
  ],
  "customerSession": Object {
    "additionalCosts": Object {
      "testType": "rDTL^f[cL)m",
    },
    "attributes": Object {
      "testType": "rDTL^f[cL)m",
    },
    "cartItems": Array [
      Object {},
    ],
    "couponCodes": Array [
      "rDTL^f[cL)m",
    ],
    "loyaltyCards": Array [
      "rDTL^f[cL)m",
    ],
    "profileId": "rDTL^f[cL)m",
    "referralCode": "rDTL^f[cL)m",
    "state": "closed",
  },
  "sessionAttributesInfo": Array [
    Object {
      "name": "rDTL^f[cL)m",
      "type": "number",
    },
  ],
}
`;

exports[`Testing snapshot for actions-talon-one destination: updateCustomerSession action - required fields 1`] = `
Object {
  "customerSession": Object {},
}
`;
